<resources>
    <string name="app_name">sales_force</string>
    <string name="txt_Header">Sales Force - Caride</string>
    <string name="txt_Login">Usuário *:</string>
    <string name="but_Login">Acessar</string>
    <string name="but_Create">Cadastrar</string>
    <string name="txt_sugest_NewUser">Ainda não possui usuário?</string>
    <string name="title_activity_create_user">activity_create_user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_UserName">Nome *:</string>
    <string name="txt_Password">Senha *:</string>
    <string name="txt_input_UserName" />
    <string name="txt_input_UserLogin" />
    <string name="txt_input_UserPassword" />
    <string name="txt_title_UserRegister">Cadastro de Usuário</string>
    <string name="but_Cancel">Cancelar</string>
    <string name="txt_title_Menu">Menu Principal</string>
    <string name="but_RegisterClient">Cadastrar</string>
    <string name="but_RegisterProduct">Cadastrar Produto</string>
    <string name="but_RegisterOrder">Cadastrar Pedido</string>
    <string name="but_Return">Retornar</string>
    <string name="txt_title_ClientRegister">Cadastro de Cliente</string>
    <string name="txt_ClientEmail">Email:</string>
    <string name="txt_ClientPhone">Telefone:</string>
    <string name="txt_input_ClientPhone" />
    <string name="txt_input_ClientEmail" />
    <string name="rad_ClientType_F">Física</string>
    <string name="rad_ClientType_J">Jurídica</string>
    <string name="txt_ClientName">Nome *:</string>
    <string name="txt_input_ClientName" />
    <string name="txt_ClientCPF">CPF *:</string>
    <string name="txt_ClientCNPJ">CNPJ *:</string>
    <string name="txt_input_ClientCNPJ" />
    <string name="txt_subtitle1_Client">Dados Pessoais</string>
    <string name="txt_subtitle2_Client">Dados de Endereço</string>
    <string name="txt_ClientAddress">Endereço:</string>
    <string name="txt_input_ClientAddress" />
    <string name="txt_ClientAddressNum">Nº:</string>
    <string name="txt_input_ClientAddressNum" />
    <string name="txt_ClientDistrict">Bairro:</string>
    <string name="txt_input_ClientDistrict" />
    <string name="txt_input_ClientCity" />
    <string name="txt_ClientCity">Cidade:</string>
    <string name="txt_ClientCEP">CEP:</string>
    <string name="txt_input_ClientCEP" />
    <string name="txt_ClientUF">UF</string>
    <string name="txt_input_ClientCPF" />
    <string name="but_RegisterUser">Cadastrar Usuário</string>
    <string name="txt_title_Welcome">Bem vindo!</string>
    <string name="txt_title_ProductRegister">Cadastro de Produto</string>
    <string name="txt_ProductName">Nome *:</string>
    <string name="rad_Status_A">Ativo</string>
    <string name="rad_Status_D">Inativo</string>
    <string name="txt_ProductUM">UM *:</string>
    <string name="txt_ProductStock">Qtd Estoque *:</string>
    <string name="txt_input_ProductQTD" />
    <string name="txt_ProductCost">"Custo: "</string>
    <string name="txt_ProductCostUM">R$</string>
    <string name="txt_ProductSalesCost">Preço Venda *:</string>
    <string name="txt_ProductBarCode">Código de Barras</string>
    <string name="but_ProductRegister_end">Cadastrar</string>
    <string name="txt_title_ClientOrder">Cadastro de Pedido</string>
    <string name="but_newClientOrder">Registrar Novo Pedido</string>
    <string name="txt_subtitle_CreateNewOrder">Clique no Botão Acima para Registrar Novo Pedido</string>
    <string name="but_ClientOrderPayment">Pagamento</string>
    <string name="txt_cab_OrderID">ID Pedido:</string>
    <string name="txt_input_ProductCost" />
    <string name="txt_input_ProductSalesPrice" />
    <string name="txt_input_ProductStock" />
    <string name="txt_input_ProductName" />
    <string name="rad_ProductStatus_A">Ativo</string>
    <string name="rad_ProductStatus_I">Inativo</string>
    <string name="txt_ProductStatus">Status do Produto *</string>
    <string name="but_ClientMaintenance">Administrar Clientes</string>
    <string name="but_ProductMaintenance">Administrar Produtos</string>
    <string name="but_UserMaintenance">Administrar Usuários</string>
    <string name="but_OrderMaintenance">Administrar Pedidos</string>
    <string name="but_Save">Salvar</string>
    <string name="txt_title_UserEdit">Editar Cadastro</string>
    <string name="but_UA_Edit">Editar</string>
    <string name="but_UA_Delete">Deletar</string>
    <string name="txt_subtitle_UserSelect">Usuário Selecionado</string>
    <string name="txt_input_UA_SelectedName" />
    <string name="txt_title_UA_UserMaintenance">Manutenção de Usuário</string>
    <string name="txt_subtitle_UA_UserList">Lista de Usuários</string>
    <string name="but_UA_Atualizar">Atualizar Lista</string>
    <string name="txt_subtitle_CA_ClientSelect">Cliente Selecionado</string>
    <string name="txt_subtitle_CA_ClientList">Lista de Clientes</string>
    <string name="txt_LUL_ClientID" />
    <string name="txt_title_UA_ClientMaintenance2">Manutenção de Clientes</string>
    <string name="but_CA_Edit">Editar</string>
    <string name="but_CA_Delete">Deletar</string>
    <string name="txt_subtitle_PA_ProductSelect">Produto Selecionado</string>
    <string name="txt_title_PA_ProductMaintenance">Manutenção de Produtos</string>
    <string name="txt_subtitle_PA_ProductList">Lista de Produtos</string>
    <string name="but_EditUser">Salvar</string>
    <string name="but_ProductRegister">Cadastrar</string>
    <string name="but_RegisterClient_menu">Cadastrar Cliente</string>
    <string name="txt_set_OrderID" />
    <string name="txt_cab_OrderCreation">Data:</string>
    <string name="txt_set_OrderCreation" />
    <string name="txt_cab_OrderList">Produtos</string>
    <string name="txt_cab_OrderClientList">Meu Carrinho</string>
    <string name="txt_LPL_title_ProductID">ID</string>
    <string name="txt_LPL_title_ProductName">Nome</string>
    <string name="txt_LPL_title_ProductQtdStock">Estoque</string>
    <string name="txt_LPL_title_ProductCost">Preço</string>
    <string name="txt_LPL_title_AddProduct">Add</string>
    <string name="txt_LCL_title_ClientUF">UF</string>
    <string name="txt_LPL_title_ClientCity">Cidade</string>
    <string name="txt_subtitle_OA_OrderProductSelect">Seleção de Produtos</string>
    <string name="but_OrderClientCart">Carrinho</string>
    <string name="txt_cab_OrderUserName">Solicitante:</string>
    <string name="txt_set_OrderUserName" />
    <string name="txt_cab_OrderDate">Data:</string>
    <string name="txt_set_OrderClient">Cliente:</string>
    <string name="txt_cab_OrderTotalCost">Total do Pedido:</string>
    <string name="txt_set_OrderTotalCost">0,00</string>
    <string name="but_OrderFinish">Pagamento</string>
    <string name="txt_input_PA_SelectedName" />
    <string name="txt_input_CA_SelectedName" />
    <string name="txt_title_CA_ClientMaintenance">Manutenção de Clientes</string>
    <string name="txt_LUL_title_User">Login</string>
    <string name="txt_input_SelectedName">Selecione Produto</string>
    <string name="txt_input_OrderSelectedName">Adicionar Produto</string>
    <string-array name="combo_clientUF_str">
        <item> "AC"</item>
        <item> "AL"</item>
        <item> "AP"</item>
        <item> "AM"</item>
        <item> "BA"</item>
        <item> "CE"</item>
        <item> "DF"</item>
        <item> "ES"</item>
        <item> "GO"</item>
        <item> "MA"</item>
        <item> "MT"</item>
        <item> "MS"</item>
        <item> "MG"</item>
        <item> "PA"</item>
        <item> "PB"</item>
        <item> "PR"</item>
        <item> "PE"</item>
        <item> "PI"</item>
        <item> "RR"</item>
        <item> "RO"</item>
        <item> "RJ"</item>
        <item> "RN"</item>
        <item> "RS"</item>
        <item> "SC"</item>
        <item> "SP"</item>
        <item> "SE"</item>
        <item> "TO"</item>
    </string-array>

    <string-array name="combo_ProductUM_str">
        <item> "UN"</item>
        <item> "CX"</item>
        <item> "KG"</item>
        <item> "LT"</item>
        <item> "ML"</item>
    </string-array>

    <string-array name="SystemMessageDelete">
        <item> "Você deseja excluir o usuário "</item>
        <item> "Você deseja excluir o produto "</item>
        <item> "Você deseja excluir o cliente "</item>
    </string-array>
    <string name="but_OrderAddProduct">+</string>
    <string name="but_sincronizaDados">Sincronizar Dados</string>
    <string name="txt_title_SyncData">Sincronizar Dados</string>
    <string name="but_SyncClient">Buscar Clientes</string>
    <string name="but_SyncClientPost">Enviar Clientes</string>
    <string name="but_SyncProductGet">Buscar Produtos</string>
    <string name="but_SyncProductPost">Enviar Produtos</string>
    <string name="but_SyncUserGet">Buscar Usuários</string>
    <string name="but_SyncUserPost">Enviar Usuários</string>
    <string name="but_SyncOrderGet">Buscar Pedidos</string>
    <string name="but_SyncOrderPost">Enviar Pedidos</string>


</resources>
