<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClientActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/frag_Header"
            android:name="com.example.sales_force.SalesForceHeader"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_ClientRegister"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="90dp"
        android:layout_weight="1"
        android:text="@string/txt_title_ClientRegister"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="402dp"
        android:layout_height="209dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_subtitle1_Client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle1_Client"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ClientName"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_ClientName"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nome do Cliente"
                android:inputType="textPersonName"
                android:text="@string/txt_input_ClientName"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ClientEmail"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_ClientEmail"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientEmail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="emailclient@ucl.br"
                android:inputType="textEmailAddress"
                android:text="@string/txt_input_ClientEmail"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_ClientPhone"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_ClientPhone"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientPhone"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="(27) 99999-9999"
                android:inputType="phone"
                android:text="@string/txt_input_ClientPhone"
                android:textAlignment="viewStart"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rad_ClientType_F"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rad_ClientType_F"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_ClientCPF"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_ClientCPF"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_input_ClientCPF"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Digite o CPF"
                        android:inputType="textPersonName"
                        android:text="@string/txt_input_ClientCPF"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rad_ClientType_J"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rad_ClientType_J"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_ClientCNPJ"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_ClientCNPJ"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_input_ClientCNPJ"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Digite o CNPJ"
                        android:inputType="textPersonName"
                        android:text="@string/txt_input_ClientCNPJ"
                        android:textSize="16sp" />

                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="402dp"
        android:layout_height="162dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/txt_subtitle2_Client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle2_Client"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ClientAddress"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_ClientAddress"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientAddress"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Rua das Flores"
                android:inputType="textPersonName"
                android:text="@string/txt_input_ClientAddress" />

            <TextView
                android:id="@+id/txt_ClientAddressNum"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_ClientAddressNum"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientAddressNum"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="25"
                android:inputType="number"
                android:text="@string/txt_input_ClientAddressNum" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ClientDistrict"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_ClientDistrict"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientDistrict"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Laranjeiras"
                android:inputType="textPersonName"
                android:text="@string/txt_input_ClientDistrict" />

            <TextView
                android:id="@+id/txt_ClientUF"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_ClientUF"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/combo_ClientUF"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="418dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ClientCity"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_ClientCity"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientCity"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Serra"
                android:inputType="textPersonName"
                android:text="@string/txt_input_ClientCity" />

            <TextView
                android:id="@+id/txt_ClientCEP"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_ClientCEP"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_ClientCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="29165-000"
                android:inputType="textPostalAddress"
                android:text="@string/txt_input_ClientCEP" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/but_Register"
        android:layout_width="121dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:text="@string/but_Create"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/but_Cancel"
        android:layout_width="121dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:text="@string/but_Cancel"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>