<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/frag_Header"
            android:name="com.example.sales_force.SalesForceHeader"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_UserRegister"
        android:layout_width="275dp"
        android:layout_height="54dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:text="@string/txt_title_UserRegister"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_UserName"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_UserName"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_UserName"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txt_input_UserName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Login"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_Login"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_UserLogin"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txt_input_UserLogin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Password"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_Password"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_UserPassword"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/txt_input_UserPassword" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/but_Register"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:text="@string/but_Create"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/but_Cancel"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:layout_weight="1"
        android:text="@string/but_Cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>